<resources>
    <string name="app_name">PillDose</string>
    <string name="bt1">Agregar</string>
    <string name="bt2">Pastilla Nueva</string>
    <string name="bt3">Enviar al pastillero</string>
    <string name="lbl1">Paciente Nuevo</string>
    <string name="lbl2">Pastilla Nueva</string>
    <string name="lbl3">Módulo del Pastillero</string>
    <string name="spinner_title">Seleccionar Paciente</string>
    <string name="action_info">Informacion</string>

    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
</resources>
